@@ -1,3 +1,9 @@
+2006-02-23  Pavel Tsekov  <ptsekov@gmx.net>
+
+	* setup.c [USE_NETCODE]: Include fish.h .
+	(int_options) [USE_NETCODE]: Add support for user configurable
+	expiration timeout of FISH directory cache entries.
+
 2006-02-21  Pavel Tsekov  <ptsekov@gmx.net>
 
 	*  cons.saver.c [HAVE_CONFIG_H]: Include config.h .
